--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-less": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.54.0"
   }
 }
